Reporte PDF para pago(Comprobante) - Add